2021-11-11  Kevin Ushey  <kevinushey@gmail.com>

	* R/RcppLdpath.R: CxxFlags() now quotes its include path

2021-10-15  Travers Ching  <traversc@gmail.com>

	* inst/tinytest/testRcppAttributePackage: Tests `signature` attribute
	* inst/tinytest/test_attribute_package.R: Tests `signature` attribute

2021-10-13  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Switch JSS url to doi form per JSS request
	* man/Rcpp-package.Rd: Idem
	* man/RcppLdFlags.Rd: Idem
	* inst/CITATION: Only use doi entries in three citEntry blocks

2021-10-11  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h: Idem

	* .codecov.yml (comment): Disable codecov comments on PRs

2021-10-10  Travers Ching  <traversc@gmail.com>

	* src/attributes.cpp: Add `signature` attribute and syntax checks

2021-10-02  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/docker.yaml (jobs): Add container builder action

2021-10-01  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* inst/NEWS.Rd: Updated

2021-09-29  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/include/Rcpp/XPtr.h: Check for new define
        `RCPP_USE_FINALIZE_ON_EXIT` to flip the value of XPtr's `finalizeOnExit`
        parameter from false (default) to true.
	* inst/tinytest/test_xptr.R: Added test for this functionality.

2021-09-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added total downloads badge

2021-09-06  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci-4.0/Dockerfile: Using R 4.0.5 to build ci-4.0
	* .github/workflows/ci.yaml (jobs): Also run against R 4.0.*

2021-09-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/Misc/piSugar.cpp (piSugar): Remove spurious call to
	RNGScope we do not need with Rcpp Attributes
	* inst/examples/RcppGibbs/RcppGibbs.R (Rgibbs): Comment on two uses
	of RNGScope as historical in pre-Attributes code